[project]
name = "support-ticket-env"
version = "0.1.0"
description = "OpenEnv Support Ticket Simulation Environment"
authors = [{ name = "Shreeya" }]

dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
